# noxterm

./: .gitignore  LICENSE  README.md  ROADMAP.md
NOXpepe/: README.md
NoxXAnyone/: ANYONE.md
frontend/: .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  websocket.ts
frontend/src/components/: NoxApp.tsx  NoxTerminal.tsx  PrivacyControls.tsx
frontend/src/services/: anonymousApi.ts
nox-backend/: .env.example  Cargo.toml  build.rs  noxterm.rs
nox-backend/migrations/: 001_initial.sql
nox-backend/src/: anyone_service.rs  db.rs  lib.rs  lifecycle.rs  noxterm.rs  security.rs
nox-backend/src/config/: error.rs  loader.rs  mod.rs  types.rs  validation.rs
nox-backend/src/db/: audit.rs  cleanup.rs  mod.rs  pool.rs  rate_limits.rs  security.rs  sessions.rs
nox-backend/src/errors/: database.rs  docker.rs
tests/: README.md  backend-api-tests.sh  frontend-integration-tests.sh  run-all-tests.sh  security-tests.sh  test-anyone-integration.sh  tty-interactive-test.sh
